workaround for surefire / JDK 1.8.0_181 incompatibility